// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery block transformations to Columns block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"100%"} -->
<div class="fin-block-column" style="flex-basis:100%"><!-- fin:gallery {"columns":8,"linkTo":"none","className":"alignfull"} -->
<figure class="fin-block-gallery has-nested-images columns-8 is-cropped alignfull"><!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon.png" alt=""/><figcaption class="fin-element-caption">Paragraph</figcaption></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon-Heading.png" alt=""/><figcaption class="fin-element-caption">Heading</figcaption></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon-Subheading.png" alt=""/><figcaption class="fin-element-caption">Subheading</figcaption></figure>
<!-- /fin:image --></figure>
<!-- /fin:gallery --></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Gallery block transformations to Group block 1`] = `
"<!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:gallery {"columns":8,"linkTo":"none","className":"alignfull"} -->
<figure class="fin-block-gallery has-nested-images columns-8 is-cropped alignfull"><!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon.png" alt=""/><figcaption class="fin-element-caption">Paragraph</figcaption></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon-Heading.png" alt=""/><figcaption class="fin-element-caption">Heading</figcaption></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon-Subheading.png" alt=""/><figcaption class="fin-element-caption">Subheading</figcaption></figure>
<!-- /fin:image --></figure>
<!-- /fin:gallery --></div>
<!-- /fin:group -->"
`;

exports[`Gallery block transformations to Image block 1`] = `
"<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon.png" alt=""/><figcaption class="fin-element-caption">Paragraph</figcaption></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon-Heading.png" alt=""/><figcaption class="fin-element-caption">Heading</figcaption></figure>
<!-- /fin:image -->

<!-- fin:image {"sizeSlug":"large","linkDestination":"none"} -->
<figure class="fin-block-image size-large"><img src="https://finpress.org/gutenberg/files/2018/07/Block-Icon-Subheading.png" alt=""/><figcaption class="fin-element-caption">Subheading</figcaption></figure>
<!-- /fin:image -->"
`;
